# File-Comparison-Console-Tool

./: .coverage  Makefile  README.md  coverage.xml  demo.cast  gitignore.txt  pyproject.toml  ruff.toml
.github/workflows/: gendiff-ci.yaml
gendiff/: buid_diff.py  build_diff.py  cli.py  gendiff.py  generate_diff.py  generated_diff.py  parse.py  parser.py
gendiff/formats/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  сli.py
tests/: test_generate_diff.py
tests/test_data/: expected_gendiff_json.txt
