[project]
authors = [
    {name = "Olga Akukina", email = "olyapa@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "This application allows you to compare two files in different formats and visually highlights differences."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"