[project]
authors = [
    {name = "Olga Akukina", email = "olyapa@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "This application allows you to compare two files in different formats and visually highlights differences."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "pytest-cov>=4.1.0",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
